fixed gutter spacing issue

--- a/scss/_d-enhancements.scss
+++ b/scss/_d-enhancements.scss
@@ -456,21 +456,14 @@ section > ul{
   text-decoration: underline;
 }
 
-
 .embed-responsive-1by2 {
--webkit-overflow-scrolling: touch;
-overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+  overflow-y: scroll;
+  
   &::before {
     padding-top: percentage(2 / 1);
   }
 }
-
-
-.embed-responsive-item {
-}
-
-
-
 
 ////////////////////////////////////////
 // IE 10 and 11 Fixes 
